demo_petstore-ee7/default-myproject/myproject/deploy/yamls-parameterized/kustomize/base/myproject-ingress.yaml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    creationTimestamp: null
    labels:
        move2kube.konveyor.io/service: myproject
    name: myproject
spec:
    rules:
        - host: localhost
          http:
            paths:
                - backend:
                    service:
                        name: sponsor-postgresql
                        port:
                            name: port-5432
                  path: /sponsor-postgresql
                  pathType: Prefix
                - backend:
                    service:
                        name: petstoreee7
                        port:
                            name: port-8080
                  path: /petstoreee7
                  pathType: Prefix
status:
    loadBalancer: {}

...
